== Changes for version 0.2.1
* added spaces to all escaped output in Test::Builder::Output
* pass test numbers to new tests in Test::Builder::Test (oops)
* created tests properly in Test::Builder
* added diag() to Test::Builder until "handles" works
* fixed diag() documentation in Test::Builder
* minor cosmetic fixes to t/010_Test_Builder.t

== Changes for version 0.2.0
* all tests pass
* ready to start using this as a backend

== Changes for version 0.1.1

* specify explicit invocant on all method calls
* made the `expect` attribute for Test::Builder::Plan private 
* added tests
* print TestPlan footer when T::B object goes out of scope (DESTROY())
* fix some parsing errors
* fix some typos

== Changes for version 0.1.0

* A handful of typos fixed
* Fixed the singleton constructor mess in Test::Builder
* Filled out stub documentation
* Added Makefile.PL

== Changes for version 0.0.1

* Version numbers and POD Documentation added.
* Initial checkin of code.